force-app/main/default/objects/MigrationFrameworkConfig__mdt/MigrationFrameworkConfig__mdt.object-meta.xml
<CustomObject>
    <description>Org-wide framework defaults. Deploy-time configuration for batch size, retry limits, Platform Cache settings, and error thresholds.</description>
    <label>Migration Framework Config</label>
    <pluralLabel>Migration Framework Configs</pluralLabel>
</CustomObject>