force-app/main/default/objects/MigrationFrameworkConfig__mdt/fields/DefaultBatchSize__c.field-meta.xml
<CustomField>
    <fullName>DefaultBatchSize__c</fullName>
    <description>Default number of rows per DML batch. Applied to new MigrationJob records when BatchSize is not explicitly set. Hard cap at 200 enforced by the framework at runtime.</description>
    <label>Default Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>