force-app/main/default/objects/MigrationFrameworkConfig__mdt/fields/EnablePlatformCache__c.field-meta.xml
<CustomField>
    <fullName>EnablePlatformCache__c</fullName>
    <description>When true, parent ID maps are cached in Platform Cache after each parent object batch. Required for migrations with more than ~40,000 parent records to avoid Apex heap limits. Set false if the org has no Platform Cache allocation — the framework falls back to chunked SOQL.</description>
    <defaultValue>true</defaultValue>
    <label>Enable Platform Cache</label>
    <type>Checkbox</type>
</CustomField>