force-app/main/default/objects/MigrationFrameworkConfig__mdt/fields/MaxRetryCount__c.field-meta.xml
<CustomField>
    <fullName>MaxRetryCount__c</fullName>
    <description>Maximum number of retry attempts for a single failed batch before the engine halts and sets the batch Status to Failed. Default 3.</description>
    <label>Max Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>