force-app/main/default/objects/MigrationFrameworkConfig__mdt/fields/MaxRowErrorsPerBatch__c.field-meta.xml
<CustomField>
    <fullName>MaxRowErrorsPerBatch__c</fullName>
    <description>Maximum number of MigrationRowError__c records written per batch. If a catastrophically bad batch would exceed this, errors beyond the threshold are summarised in BatchError rather than written individually. Prevents runaway DML on extremely dirty data. Default 500.</description>
    <label>Max Row Errors Per Batch</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>