force-app/main/default/objects/MigrationFrameworkConfig__mdt/fields/PlatformCachePartition__c.field-meta.xml
<CustomField>
    <fullName>PlatformCachePartition__c</fullName>
    <description>API name of the Platform Cache partition used to store parent ID maps. Must be an existing Org Cache partition. Example: local.MigrationCache</description>
    <label>Platform Cache Partition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>