force-app/main/default/objects/MigrationFrameworkConfig__mdt/fields/PreValidationBatchSize__c.field-meta.xml
<CustomField>
    <fullName>PreValidationBatchSize__c</fullName>
    <description>Number of rows processed per validation batch. Higher than the DML batch size because validation is read-only (no DML governor constraints). Default 1000.</description>
    <label>Pre-Validation Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>