force-app/main/default/objects/MigrationFrameworkConfig__mdt/fields/RollbackWindowDays__c.field-meta.xml
<CustomField>
    <fullName>RollbackWindowDays__c</fullName>
    <description>Number of days after job completion during which the rollback log is retained. After this window, the scheduled cleanup job purges MigrationRecordLog records for completed jobs. Default 30.</description>
    <label>Rollback Window (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>